Updated maven config: encoding, jvm target, kotlin plugin